[gd_scene load_steps=11 format=3 uid="uid://67fftbosvmmt"]

[ext_resource type="Script" uid="uid://6f2yjn6wgcun" path="res://code/ship/modules/weapons/weapon_module.gd" id="1_by74g"]
[ext_resource type="Script" uid="uid://crmxerc164n6q" path="res://code/weapons/constant_fire_weapon.gd" id="2_rsxp2"]
[ext_resource type="PackedScene" uid="uid://bnvojbycskewd" path="res://prefabs/projectiles/test_beam.tscn" id="3_33xdp"]
[ext_resource type="AudioStream" uid="uid://d1psa84etuesc" path="res://sandbox/pisarski/beam_start_tmp.wav" id="4_7286u"]
[ext_resource type="AudioStream" uid="uid://cl30vhv1agqcr" path="res://sandbox/pisarski/beam_loop_tmp.wav" id="5_xyits"]
[ext_resource type="AudioStream" uid="uid://bq3myi1evd56a" path="res://art/audio/sounds/shield_takingdmg_sound.wav" id="6_5djq1"]
[ext_resource type="Script" uid="uid://b1ghhc3fukfu3" path="res://code/sound/sound_emitter.gd" id="7_msse8"]

[sub_resource type="CylinderMesh" id="CylinderMesh_30wr0"]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_puthi"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_5lft3"]
clip_count = 3
clip_0/name = &"start"
clip_0/stream = ExtResource("4_7286u")
clip_0/auto_advance = 1
clip_0/next_clip = 1
clip_1/name = &"loop"
clip_1/stream = ExtResource("5_xyits")
clip_1/auto_advance = 0
clip_2/name = &"end"
clip_2/stream = ExtResource("6_5djq1")
clip_2/auto_advance = 0
_transitions = {
Vector2i(0, 1): {
"fade_beats": 8.0,
"fade_mode": 3,
"from_time": 0,
"to_time": 1
},
Vector2i(1, 2): {
"fade_beats": 0.5,
"fade_mode": 3,
"from_time": 0,
"to_time": 1
}
}

[node name="BeamWeaponModule" type="CollisionShape3D" node_paths=PackedStringArray("weapon")]
script = ExtResource("1_by74g")
weapon = NodePath("ConstantFireWeapon")
allow_auto_fire = true
recoil_force = 50.0

[node name="ConstantFireWeapon" type="Node3D" parent="."]
script = ExtResource("2_rsxp2")
cooldown = 1.0
projectile = ExtResource("3_33xdp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ConstantFireWeapon"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_30wr0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25)
mesh = SubResource("BoxMesh_puthi")

[node name="SoundEmitter" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamInteractive_5lft3")
script = ExtResource("7_msse8")
stop_behaviour = 1
transition_clip_name = &"end"
metadata/_custom_type_script = "uid://b1ghhc3fukfu3"

[connection signal="activated" from="." to="SoundEmitter" method="start_playing"]
[connection signal="deactivated" from="." to="SoundEmitter" method="stop_playing"]
